stage/services/metadata-completeness-api/main.tf
resource "aws_ecs_service" "metadata-completeness-api-stage" {
  name = "metadata-completeness-api-stage"
  cluster = data.aws_ecs_cluster.stage.id
  launch_type = "FARGATE"
  task_definition = aws_ecs_task_definition.metadata-completeness-api-stage.arn
  desired_count = 1

  network_configuration {
    security_groups = [data.aws_security_group.datacite-private.id]
    subnets         = [
      data.aws_subnet.datacite-private.id,
      data.aws_subnet.datacite-alt.id
    ]
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.metadata-completeness-api-stage.id
    container_name   = "metadata-completeness-api-stage"
    container_port   = "80"
  }

  service_registries {
    registry_arn = aws_service_discovery_service.metadata-completeness-api-stage.arn
  }

  depends_on = [
    data.aws_lb_listener.stage
  ]
}

resource "aws_cloudwatch_log_group" "metadata-completeness-api-stage" {
  name = "/ecs/metadata-completeness-api-stage"
}

resource "aws_ecs_task_definition" "metadata-completeness-api-stage" {
  family = "metadata-completeness-api-stage"
  execution_role_arn = data.aws_iam_role.ecs_task_execution_role.arn
  network_mode = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  cpu = "256"
  memory = "512"
  container_definitions = templatefile("metadata-completeness-api.json",
    {
      version            = var.pekingese_tags["sha"]
      api_port = var.api_port
      opensearch_host = var.opensearch_host
      opensearch_index = var.opensearch_index
    })
}

resource "aws_lb_target_group" "metadata-completeness-api-stage" {
  name     = "metadata-completeness-api-stage"
  port     = 80
  protocol = "HTTP"
  vpc_id   = var.vpc_id
  target_type = "ip"

  health_check {
    path = "/heartbeat"
    interval = 300
    timeout = 120
  }
}

resource "aws_lb_listener_rule" "metadata-completeness-api-stage" {
  listener_arn = data.aws_lb_listener.stage.arn
  priority     = 42

  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.metadata-completeness-api-stage.arn
  }

  condition {
    host_header {
      values = ["api.stage.datacite.org"]
    }
  }

  condition {
    path_pattern {
      values = ["/completeness*"]
    }
  }
}

resource "aws_service_discovery_service" "metadata-completeness-api-stage" {
  name = "metadata-completeness-api.stage"

  health_check_custom_config {
    failure_threshold = 3
  }

  dns_config {
    namespace_id = var.namespace_id

    dns_records {
      ttl = 300
      type = "A"
    }
  }
}
